--- a/index.Rmd
+++ b/index.Rmd
@@ -1,46 +1,45 @@
 ---
-title: "Nick Strayer's CV"
-author: Nick Strayer
+title: Farhana's Resume"
+author: Farhana Urni
 date: "`r Sys.Date()`"
 output:
   pagedown::html_resume:
-    css: ['css/styles.css', 'resume']
+    css: ['css/custom_resume.css', 'css/styles.css', 'resume']
     # set it to true for a self-contained HTML page but it'll take longer to render
     self_contained: true
 ---
+
 
 ```{r, include=FALSE}
 knitr::opts_chunk$set(
   results='asis', 
   echo = FALSE
 )
-
-library(glue)
 library(tidyverse)
+library(glue)
 
 # Set this to true to have links turned into footnotes at the end of the document
-PDF_EXPORT <- FALSE
+PDF_EXPORT <- TRUE
 
 # Holds all the links that were inserted for placement at the end
 links <- c()
 
 source('parsing_functions.R')
 
-# Load csv with position info
-position_data <- read_csv('positions.csv')
-```
 
+# First let's get the data, filtering to only the items tagged as
+# Resume items
+position_data <- read_csv('positions_new.csv') %>% 
+  filter(in_resume) %>% 
+  mutate(
+    # Build some custom sections by collapsing others
+    section = case_when(
+      section %in% c('research_positions', 'industry_positions', 'analytic_positions') ~ 'positions', 
+      section %in% c('data_science_writings', 'by_me_press') ~ 'writings',
+      TRUE ~ section
+    )
+  ) 
 
-```{r}
-# When in export mode the little dots are unaligned, so fix that. 
-if(PDF_EXPORT){
-  cat("
-  <style>
-  :root{
-    --decorator-outer-offset-left: -6.5px;
-  }
-  </style>")
-}
 ```
 
 
@@ -48,57 +47,63 @@ Aside
 ================================================================================
 
 
-![logo](beta_dist.png){width=100%}
-
-```{r}
-# When in export mode the little dots are unaligned, so fix that. 
-if(PDF_EXPORT){
-  cat("View this CV online with links at _nickstrayer.me/cv_")
-} else {
-  cat("[<i class='fas fa-download'></i> Download a PDF of this CV](https://github.com/nstrayer/cv/raw/master/strayer_cv.pdf)")
-}
-```
+![logo](960px-Sparky_on_the_Field.jpg){width=70%}
 
 Contact {#contact}
 --------------------------------------------------------------------------------
 
 
-- <i class="fa fa-envelope"></i> nick.strayer@gmail.com
-- <i class="fa fa-twitter"></i> NicholasStrayer
-- <i class="fa fa-github"></i> github.com/nstrayer
-- <i class="fa fa-link"></i> [nickstrayer.me](http://nickstrayer.me/)
-- <i class="fa fa-phone"></i> (734) 645-0110
+
+- <i class="fa fa-envelope"></i> gaurni@asu.edu
+- <i class="fa fa-twitter"></i> Gaurni
+- <i class="fa fa-github"></i> https://github.com/furni1977/PAF514_module6_CV
+- <i class="fa fa-link"></i> [https://watts-college.github.io/PAF514_module6_CV](https://watts-college.github.io/PAF514_module6_CV)
+- <i class="fa fa-phone"></i> (017) 848-4653
 
 
 
 Language Skills {#skills}
 --------------------------------------------------------------------------------
 
+
 ```{r}
 skills <- tribble(
   ~skill,               ~level,
   "R",                  5,
-  "Javascript (d3.js)", 4.5,
-  "Python",             4,
-  "Bash",               3.5,
-  "SQL",                3,
-  "C++",                3,
+  "Javascript (d3.js)", 1,
+  "Python",             2,
+  "Bash",               1.5,
+  "SQL",                5,
+  "C++",                1,
   "AWK",                3
 )
-
 build_skill_bars(skills)
 ```
 
 
 
+Open Source Contributions {#open-source}
+--------------------------------------------------------------------------------
+
+All projects available at `github.com/furni1977/<name>`
+
+
+- `Montyhall`: R package tosolve Montyhall problem
+
+
+
+More info {#more-info}
+--------------------------------------------------------------------------------
+
+See full CV at https://watts-college.github.io/PAF514_module6_CV/cv.html for more complete list of positions and publications.
 
 
 Disclaimer {#disclaimer}
 --------------------------------------------------------------------------------
 
-Made with the R package [**pagedown**](https://github.com/rstudio/pagedown). 
+Made w/ [**pagedown**](https://github.com/rstudio/pagedown). 
 
-The source code is available at [github.com/nstrayer/cv](https://github.com/nstrayer/cv).
+Source code: [https://watts-college.github.io/PAF514_module6_CV](https://watts-college.github.io/PAF514_module6_CV).
 
 Last updated on `r Sys.Date()`.
 
@@ -108,15 +113,13 @@ Last updated on `r Sys.Date()`.
 Main
 ================================================================================
 
-Nick Strayer {#title}
+Farhana's Resume {#title}
 --------------------------------------------------------------------------------
 
-
 ```{r}
-intro_text <- "I have made [visualizations viewed by hundreds of thousands of people](https://www.nytimes.com/interactive/2016/08/26/us/college-student-migration.html), [sped up query times for 25 terabytes of data by an average of 4,800 times](https://livefreeordichotomize.com/2019/06/04/using_awk_and_r_to_parse_25tb/), and built [packages for R](https://github.com/nstrayer/shinysense) that let you [do magic](http://nickstrayer.me/dataDayTexas/).
-
-Currently searching for a data science position that allows me to build tools using visualization and machine learning to help people explore and understand their data. 
+intro_text <- "My background as a highly self-motivated professional has equipped me with exceptional interpersonal and communication skills, allowing me to adeptly tackle complex problems. My experience as a data analyst at Trinity Centre for Global Health in Dublin and my 2 years of research at Arizona state University have sharpened my expertise in data analysis, statistical analysis, study design, and report writing. I am currently looking for internship and job opportunities  to apply my skills and further advance my career. 
 "
+
 
 cat(sanitize_links(intro_text))
 ```
@@ -127,105 +130,24 @@ Education {data-icon=graduation-cap data-concise=true}
 --------------------------------------------------------------------------------
 
 ```{r}
-print_section(position_data, 'education')
+position_data %>% print_section('education')
 ```
 
 
 
-Research Experience {data-icon=laptop}
+Selected Positions {data-icon=suitcase}
 --------------------------------------------------------------------------------
 
 ```{r}
-print_section(position_data, 'research_positions')
+position_data %>% print_section('positions')
 ```
 
-
-
-Industry Experience {data-icon=suitcase}
---------------------------------------------------------------------------------
-
-::: aside
-I have worked in a variety of roles ranging from journalist to software engineer to data scientist. I like collaborative environments where I can learn from my peers. 
-:::
-
-```{r}
-print_section(position_data, 'industry_positions')
-```
-
-<br>
-<br>
-<br>
-
-Teaching Experience {data-icon=chalkboard-teacher}
---------------------------------------------------------------------------------
-
-::: aside
-I am passionate about education. I believe that no topic is too complex if the teacher is empathetic and willing to think about new methods of approaching task. 
-:::
-
-```{r}
-print_section(position_data, 'teaching_positions')
-```
-
-
-Selected Data Science Writing {data-icon=chart-line}
+Selected Writing {data-icon=newspaper}
 --------------------------------------------------------------------------------
 
 
-::: aside
-I regularly blog about data science and visualization on my blog [LiveFreeOrDichotomize.](https://livefreeordichotomize.com/)
-:::
-
 ```{r}
-print_section(position_data, 'data_science_writings')
-```
-
-
-
-Selected Press (About)  {data-icon=newspaper}
---------------------------------------------------------------------------------
-
-```{r}
-print_section(position_data, 'about_me_press')
-```
-
-
-
-Selected Press (By)  {data-icon=newspaper}
---------------------------------------------------------------------------------
-
-```{r}
-print_section(position_data, 'by_me_press')
-```
-
-
-
-
-Selected Publications, Posters, and Talks {data-icon=book}
---------------------------------------------------------------------------------
-
-```{r}
-print_section(position_data, 'academic_articles')
-```
-
-
-
-```{r}
-if(PDF_EXPORT){
-  cat("
-  
-Links {data-icon=link}
---------------------------------------------------------------------------------
-
-<br>
-
-
-")
-  
-  walk2(links, 1:length(links), function(link, index){
-    print(glue('{index}. {link}'))
-  })
-}
+position_data %>% print_section('writings')
 ```
 
 
